# STM32_LSM6DSO

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  STM32_LSM6DSO.code-workspace  justfile  platformio.ini  tasks.todo  toolchain-arm.cmake
include/: README.md  config.h  stm32f10x.h  system_stm32f10x.h  utils.h
include/app/: fsm.h
include/drivers/: lsm6dso.h
include/hal/: clock.h  gpio.h  gpio_config.h  pwm.h  spi.h  timer.h  uart.h  watchdog.h
log2csv/: parser.go  parser.py
plotVis/: README.md  README_accel_calibration.md  __init__.py  accel_6axis_calibration.m  accel_calibration_coefficients.mat  accel_calibration_coefficients.txt  accel_calibration_simple.m  apply_accel_calibration.m  compute_accel_calibration.m  compute_gyro_bias.m  config.py  load_accel_calibration.m  plot_logs.m  plot_logs.py  run_accel_calibration.m  run_calibration.py  simple_psd.m  test_accel_calibration.m  test_calibration.py
plotVis/calibration/: __init__.py  calibration.py
plotVis/utils/: __init__.py  io.py
plotVis/visualization/: __init__.py  plots.py  psd.py
schemes/: Init_diag.excalidraw  Main.excalidraw  Stab_diag.excalidraw  block_diagram.excalidraw
src/: MAIN.c  MAIN.h  main.c
src/app/: fsm.c
src/drivers/: lsm6dso.c
src/hal/: clock.c  gpio.c  pwm.c  spi.c  timer.c  uart.c  watchdog.c
